# cairn

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.local  LICENSE  PR_DESCRIPTION.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  package-lock.json  skills-lock.json
.cargo/: audit.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  rust-security.yml
crates/cairn-api/: Cargo.toml  build.rs
crates/cairn-api/src/: admin.rs  auth.rs  capabilities.rs  devices.rs  events.rs  extensions.rs  ingest.rs  ledger.rs  lib.rs  metrics.rs  openapi.rs  push.rs  rate_limit.rs  security_headers.rs  session.rs  setup_wizard.rs  ui.rs
crates/cairn-assemble/src/: lib.rs
crates/cairn-bench/: Cargo.toml
crates/cairn-bench/src/: fixture.rs  horizon.rs  lib.rs  longmemeval.rs  retention.rs
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: bench.rs  doctor.rs  extra.rs  hook.rs  install.rs  main.rs  onboard.rs  pair.rs  rules.rs  sync.rs  update.rs
crates/cairn-client/: Cargo.toml
crates/cairn-client/src/: bench.rs  doctor.rs  extra.rs  hook.rs  main.rs  onboard.rs  pack.rs  pair.rs  pool.rs  reset.rs  rules.rs  setup.rs  status.rs  sync.rs  update.rs
crates/cairn-context/: Cargo.toml
crates/cairn-context/src/: bounce_tracker.rs  context_ledger.rs  lib.rs  outline.rs
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: admin.rs  config.rs  error.rs  hash.rs  lib.rs  model.rs  tenant.rs
crates/cairn-embed/: Cargo.toml
crates/cairn-embed/src/: lib.rs
crates/cairn-guard/: Cargo.toml
crates/cairn-guard/src/: lib.rs
crates/cairn-ingest/: Cargo.toml
crates/cairn-ingest/src/: lib.rs
crates/cairn-mcp/: Cargo.toml
crates/cairn-mcp/src/: lib.rs  prompts.rs  resources.rs
crates/cairn-memory/: Cargo.toml
crates/cairn-memory/src/: analysis.rs  followup_tracker.rs  gotcha_tracker.rs  lib.rs  llm_consolidator.rs  query_expander.rs  rerank.rs
crates/cairn-pack/: Cargo.toml
crates/cairn-pack/src/: install.rs  lib.rs  manifest.rs  pack.rs  signing.rs
crates/cairn-proactive/: Cargo.toml
crates/cairn-proactive/src/: intent.rs  lib.rs  pref.rs
crates/cairn-profile/: Cargo.toml
crates/cairn-profile/src/: lib.rs  sanitize.rs
crates/cairn-proxy/: Cargo.toml
crates/cairn-proxy/src/: config.rs  fanout.rs  lib.rs  router.rs
crates/cairn-registry/: Cargo.toml
crates/cairn-registry/src/: federation.rs  lib.rs  store.rs
crates/cairn-rerank/: Cargo.toml
crates/cairn-rerank/src/: lib.rs
crates/cairn-server/: Cargo.toml
crates/cairn-server/src/: main.rs
crates/cairn-session/: Cargo.toml
crates/cairn-session/src/: lib.rs
crates/cairn-share/: Cargo.toml
crates/cairn-share/src/: lib.rs
crates/cairn-shell/: Cargo.toml
crates/cairn-shell/src/: category.rs  lib.rs  pipeline.rs  registry.rs
crates/cairn-shell/src/patterns/: build.rs  dirlist.rs  fileread.rs  http.rs  infra.rs  lint.rs  mod.rs  package.rs  search.rs  vcs.rs
crates/cairn-store/: Cargo.toml
crates/cairn-store/src/: blob.rs  db.rs  helix.rs  lib.rs  memory_backend.rs
crates/cairn-sync/: Cargo.toml
crates/cairn-sync/src/: counter.rs  crypto.rs  lib.rs  orset.rs  sync.rs
crates/cairn-tests/: Cargo.toml
crates/cairn-tests/src/: fixtures.rs  lib.rs  mock_store.rs
crates/cairn-tests/tests/: 01_memory_tiers.rs  02_http_api_memory.rs  04_rerank.rs  05_guardrails.rs  06_shell_profiles.rs  07_share.rs  08_pack_registry.rs  09_session.rs  10_sync_crypto.rs  12_proactive.rs  13_ingest.rs  14_http_api_guard_sessions.rs  16_config.rs  17_workspace_invariants.rs  18_context_engine.rs  19_memory_engine.rs  20_assembler.rs  21_http_api_registry_share.rs  22_mcp_dispatch.rs  23_api_envelope.rs  24_static_handler.rs
deploy/: fly.toml  railway.toml  render.yaml
docs/: ADMIN.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_v6.1.0.md  BENCHMARKS.md  CONVENTIONS.md  DECISIONS.md  E2E.md  IDE-VERIFICATION.md  P0_SECURITY_PLAN.md  PLAN.md  PLAN_v0.5.0.md  PLAN_v0.6.0.md  PLAN_v0.7.0.md  README.md  RECOMMENDATIONS.md  ROADMAP.md  TESTING.md  UPGRADING.md  WEB.md  audit-build-runtime.md  audit-deps-ci.md  audit-security-arch.md
docs/_templates/: adr-template.md  audit-template.md  finding-template.md  guide-template.md  plan-template.md  reference-template.md  testing-walk-template.md
docs/archive/: P0_SECURITY_PLAN.md  PLAN_v0.5.0.md  p0-security-plan.md  plan-v0.5.0.md
docs/audits/: REPORT.md  build-runtime.md  deps-ci.md  recommendations.md  report.md  security-arch.md  v6.1.0.md
docs/guides/: admin.md  ide-integration.md  upgrading.md  web-auth.md
docs/live-e2e/: README.md
docs/live-e2e/screenshots/: .gitkeep
docs/planning/: roadmap.md
docs/planning/plans/: v0.6.0.md  v0.7.0.md  v0.8.0.md
docs/reference/: architecture.md  decisions.md  vision.md
docs/testing/: benchmarks.md  e2e.md  flows.md  overview.md  run-agent-tests.md
docs/testing/findings/: README.md
docs/testing/live-e2e/: 01-auth.md  02-memory-crud.md  03-recall-search.md  04-memory-graph-heatmap-arch.md  05-context-engine.md  06-compression-savings.md  07-tier-promotion.md  08-guard-drift.md  09-guard-checkpoint.md  10-guard-anchor.md  11-profile-preferences.md  12-share-pool.md  13-registry-packs.md  14-registry-trust.md  15-devices-tokens.md  16-pair-mobile.md  17-push.md  18-ingest.md  19-audit.md  20-sessions-ccp.md  21-sync.md  22-health-discovery.md  23-cli.md  24-hooks.md  25-agent-wiring.md  26-dashboard-palette.md  27-settings.md  28-edge-cases.md  29-stubs-and-gaps.md  30-mcp-transport.md  README.md
dogfood-output/: report.md
packaging/homebrew-tap/: README.md  cairn.rb
plugins/cairn/: .mcp.json  README.md
plugins/cairn/.claude-plugin/: plugin.json
scripts/: e2e.ps1  install.ps1  install.sh
scripts/e2e/: 01-health.ps1  19-prompts-cli.ps1  20-desktop-install.ps1  _lib.ps1
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/public/: sw.js
web/src/app/: globals.css  (+3 more)
(+150 files in other folders)
