[workspace]
resolver = "2"
members = [
    "crates/cairn-core",
    "crates/cairn-store",
    "crates/cairn-context",
    "crates/cairn-memory",
    "crates/cairn-guard",
    "crates/cairn-assemble",
    "crates/cairn-shell",
    "crates/cairn-profile",
    "crates/cairn-share",
    "crates/cairn-session",
    "crates/cairn-pack",
    "crates/cairn-registry",
    "crates/cairn-sync",
    "crates/cairn-bench",
    "crates/cairn-proxy",
    "crates/cairn-proactive",
    "crates/cairn-ingest",
    "crates/cairn-embed",
    "crates/cairn-api",
    "crates/cairn-mcp",
    "crates/cairn-client",
]

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Cairn contributors"]
repository = "https://github.com/Vellixia/cairn"
# MSRV 1.85 - required by quinn-proto 0.11.15 (RUSTSEC-2026-0185 fix; see
# [patch.crates-io] below). Bumped from 1.80 on 2026-06-22 to clear the
# advisory; nothing in the workspace itself requires >1.80 features.
rust-version = "1.85"

[workspace.dependencies]
# internal crates
cairn-core = { path = "crates/cairn-core" }
cairn-store = { path = "crates/cairn-store" }
cairn-context = { path = "crates/cairn-context" }
cairn-memory = { path = "crates/cairn-memory" }
cairn-guard = { path = "crates/cairn-guard" }
cairn-assemble = { path = "crates/cairn-assemble" }
cairn-shell = { path = "crates/cairn-shell" }
cairn-profile = { path = "crates/cairn-profile" }
cairn-share = { path = "crates/cairn-share" }
cairn-session = { path = "crates/cairn-session" }
cairn-pack = { path = "crates/cairn-pack" }
cairn-registry = { path = "crates/cairn-registry" }
cairn-sync = { path = "crates/cairn-sync" }
cairn-bench = { path = "crates/cairn-bench" }
cairn-proxy = { path = "crates/cairn-proxy" }
cairn-proactive = { path = "crates/cairn-proactive" }
cairn-ingest = { path = "crates/cairn-ingest" }
cairn-embed = { path = "crates/cairn-embed" }
cairn-api = { path = "crates/cairn-api" }
cairn-mcp = { path = "crates/cairn-mcp" }
cairn-client = { path = "crates/cairn-client" }

# Pinned to specific minor versions via tilde (~major.minor) so CI can fail
# loudly via `cargo build --locked` if Cargo.lock drifts outside that minor.
# Tilde syntax constrains to >=MAJOR.MINOR.0, <MAJOR.(MINOR+1).0.
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
thiserror = "~2.0"
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
sha2 = "~0.10"
hex = "~0.4"
uuid = { version = "~1.23", features = ["v4", "serde"] }
directories = "~5.0"
similar = "~2.7"
tokio = { version = "~1.52", features = ["full"] }
axum = "~0.7"
tower = "~0.5"
tower-http = { version = "~0.5", features = ["fs", "cors", "trace", "limit"] }
clap = { version = "~4.6", features = ["derive"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
tempfile = "~3.27"
rust-embed = "~8.11"
ureq = { version = "~2.12", features = ["json"] }
dotenvy = "~0.15"
jsonwebtoken = "~9.3"
regex = "~1.12"
helix-db = "~2.0"
self_update = { version = "~0.44", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2", "archive-zip", "compression-zip-deflate"] }
url = "~2.5"
argon2 = "~0.5"
rand = "~0.8"
base64 = "~0.22"
hmac = "~0.12"
ed25519-dalek = { version = "~2.1", features = ["rand_core"] }
rand_core = "~0.6"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

# Security override: RUSTSEC-2026-0185 (GHSA-4w2j-m93h-cj5j) - quinn-proto
# 0.11.14 is vulnerable to unbounded out-of-order stream reassembly (CVSS 7.5
# HIGH, unauth network DoS). The fix landed in quinn-proto 0.11.15
# (2026-06-22). helix-db 2.0.x pins reqwest 0.13.4 which transitively pins
# quinn-proto exactly to 0.11.14, so the resolver cannot pick the patched
# version on its own. Force it here until helix-db upstream updates the
# pin. Remove this patch once helix-db (or a replacement) bumps reqwest or
# quinn-proto to >=0.11.15 transitively.
[patch.crates-io]
quinn-proto = { git = "https://github.com/quinn-rs/quinn", tag = "quinn-proto-0.11.15" }
