[package]
name = "cairn-api"
description = "Cairn HTTP API (axum) + embedded control-plane UI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-context.workspace = true
cairn-memory.workspace = true
cairn-guard.workspace = true
cairn-assemble.workspace = true
cairn-shell.workspace = true
cairn-profile.workspace = true
cairn-share.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
