[package]
name = "cairn-api"
description = "Cairn HTTP API (axum) + embedded control-plane UI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-context.workspace = true
cairn-memory.workspace = true
cairn-guard.workspace = true
cairn-assemble.workspace = true
cairn-shell.workspace = true
cairn-profile.workspace = true
cairn-share.workspace = true
cairn-mcp.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
