[package]
name = "cairn-bench"
description = "Benchmark harness + fixtures for v0.5.0 Sprint 16 --- LongMemEval, LoCoMo, task-success horizon, smart-memory retention."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
cairn-core.workspace = true
cairn-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
