[package]
name = "cairn-cli"
description = "The Cairn command-line interface (the `cairn` binary)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-context.workspace = true
cairn-memory.workspace = true
cairn-api.workspace = true
cairn-mcp.workspace = true
cairn-share.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
ureq.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2", "archive-zip", "compression-zip-deflate"] }

[dev-dependencies]
tempfile.workspace = true
