[package]
name = "cairn-cli"
description = "The Cairn command-line interface (the `cairn` binary)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[features]
default = []
# Build the binary with in-process local embeddings (all-MiniLM-L6-v2). Enabled in the Docker and
# release builds so `CAIRN_EMBED_PROVIDER=local` (the default) works out of the box.
embed-local = ["cairn-store/local"]

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-context.workspace = true
cairn-memory.workspace = true
cairn-api.workspace = true
cairn-mcp.workspace = true
cairn-share.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
ureq.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
self_update.workspace = true

[dev-dependencies]
tempfile.workspace = true
