[package]
name = "cairn-client"
description = "The Cairn client binary (`cairn`). Connects agents to a Docker-hosted Cairn server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[features]
default = []
# The client is a thin remote-only HTTP wrapper. No local engines, no HelixDB.

[dependencies]
cairn-core.workspace = true
cairn-mcp.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
base64.workspace = true
chrono.workspace = true
self_update.workspace = true
ureq.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
