[package]
name = "cairn-context"
description = "Cairn context engine: cached reads (re-read killer) with byte-identical expand."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
serde.workspace = true
similar.workspace = true

[dev-dependencies]
tempfile.workspace = true
