[package]
name = "cairn-context"
description = "Cairn context engine: cached reads (re-read killer) with byte-identical expand."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
serde.workspace = true
similar.workspace = true
chrono.workspace = true
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"

[dev-dependencies]
tempfile.workspace = true
