[package]
name = "cairn-core"
description = "Shared domain types for the Cairn context & reliability engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
directories.workspace = true
