[package]
name = "cairn-embed"
description = "Pluggable text embeddings for Cairn's vector memory (local fastembed, OpenAI, Ollama)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# `local` pulls fastembed (ONNX) for in-process all-MiniLM-L6-v2 embeddings. It's the runtime
# default provider, but the heavy native dep is opt-in at compile time — the shipping binary turns
# it on; the lean workspace gate leaves it off and exercises the local path with `--features local`.
default = []
local = ["dep:fastembed"]

[dependencies]
cairn-core.workspace = true
serde_json.workspace = true
ureq.workspace = true
sha2.workspace = true
fastembed = { version = "4.0", optional = true }
tracing.workspace = true
