[package]
name = "cairn-guard"
description = "Cairn active guardrails: verify agent edits against retained originals."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
serde.workspace = true
similar.workspace = true

[dev-dependencies]
tempfile.workspace = true
