[package]
name = "cairn-ingest"
description = "Transcript ingestion --- VTT/SRT/JSON parsers + chunking + memory materialization (v0.5.0 Sprint 22)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
cairn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
