[package]
name = "cairn-mcp"
description = "Cairn MCP server (stdio) — connect any MCP-capable agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-context.workspace = true
cairn-memory.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
