[package]
name = "cairn-mcp"
description = "Cairn MCP server (stdio) — connect any MCP-capable agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-context.workspace = true
cairn-memory.workspace = true
cairn-guard.workspace = true
cairn-assemble.workspace = true
cairn-shell.workspace = true
cairn-profile.workspace = true
cairn-share.workspace = true
cairn-proactive.workspace = true
cairn-registry.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
tracing.workspace = true

chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
