[package]
name = "cairn-pack"
description = "Context package format (`.cairnpkg`) --- portable share + import bundles for Cairn memories, profile, patterns, and graph."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Build with in-process local embeddings.
embed-local = ["cairn-store/local"]

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-share.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid.workspace = true
ed25519-dalek = { workspace = true, features = ["zeroize"] }
rand_core.workspace = true

[dev-dependencies]
tempfile.workspace = true