[package]
name = "cairn-proactive"
description = "Proactive recall --- intent-detection hook that auto-injects relevant memories before each agent turn (v0.5.0 Sprint 18)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
cairn-core.workspace = true
cairn-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
