[package]
name = "cairn-profile"
description = "Cairn preference/behavior profile --- learn how the user works and inject it."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-memory.workspace = true

[dev-dependencies]
cairn-store.workspace = true
tempfile.workspace = true
