[package]
name = "cairn-proxy"
description = "cairn.sh reverse proxy — fan-out across self-hosted cairn registries (v0.5.0 Sprint 19b)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
cairn-pack.workspace = true
cairn-registry.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
futures-util = "~0.3"
tower-http.workspace = true
tracing.workspace = true
ureq.workspace = true
toml = "~0.8"

[dev-dependencies]
tempfile.workspace = true
http-body-util = "~0.1"
hyper = { version = "~1", features = ["http1"] }
