[package]
name = "cairn-registry"
description = "Self-hosted pack registry — publish, search, download, and revoke `.cairnpkg` bundles (v0.5.0 Sprint 13)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
embed-local = ["cairn-store/local"]

[dependencies]
cairn-core.workspace = true
cairn-pack.workspace = true
cairn-share.workspace = true
cairn-store.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "~0.1"
tower-http = { workspace = true, features = ["limit"] }
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
hyper = { version = "~1", features = ["http1"] }
http-body-util = "~0.1"
