[package]
name = "cairn-server"
description = "The Cairn server binary (serve, token management, pair-code generation)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[features]
default = []
# Build with in-process local embeddings (all-MiniLM-L6-v2). Enabled in Docker and release builds.
embed-local = ["cairn-store/local"]

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
cairn-api.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
