[package]
name = "cairn-share"
description = "Cairn privacy-first sanitization: detect & redact secrets/PII before knowledge is shared."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
serde.workspace = true
regex.workspace = true

[dev-dependencies]
serde_json.workspace = true
