[package]
name = "cairn-shell"
description = "Cairn shell/tool-output compression (RTK-style) with lossless recover via the blob store."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-store.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
