[package]
name = "cairn-store"
description = "SQLite + content-hash blob store for Cairn (full-fidelity originals)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
