[package]
name = "cairn-store"
description = "HelixDB-backed structured store + content-hash blob store for Cairn (full-fidelity originals)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Compile in the in-process local embedder (fastembed/ONNX, all-MiniLM-L6-v2). Off in the lean
# workspace so CI stays fast; the shipping binary and Docker image turn it on so `local` (the
# default embedding provider) works with no API key.
local = ["cairn-embed/local"]

[dependencies]
cairn-core.workspace = true
cairn-embed.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
helix-db.workspace = true

[dev-dependencies]
tempfile.workspace = true
