[package]
name = "cairn-sync"
description = "Offline-first sync with CRDTs --- replace last-write-wins with conflict-free merge (v0.5.0 Sprint 15a)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
cairn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
argon2 = "~0.5"
chacha20poly1305 = "~0.10"
rand_core = "~0.6"

[dev-dependencies]
tempfile.workspace = true
